fix collapse side bar icons to center

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,6 +88,11 @@ body {
 [data-collapse="true"] .toggle_btn {
   transform: rotate(180deg);
 }
+[data-collapse="true"] #Sidebar_side_header__a6k7a,
+[data-collapse="true"] #Sidebar_nav_links__U48cH #Sidebar_link__QBJF_ a {
+  justify-content: center !important;
+  /* padding: 0 !important; */
+}
 
 .aside {
   transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.1);
